fix the tinder card layout to stay aligned

--- a/app/assets/stylesheets/jTinder.scss
+++ b/app/assets/stylesheets/jTinder.scss
@@ -28,16 +28,16 @@
     top: 0;
     z-index: 2;
     left: 0;
-    // box-shadow: 0 0 20px rgba(0, 0, 0, .2);
+    // box-shadow: 0 0 2px rgba(0, 0, 0, .1);
     overflow: hidden;
     text-align: center;
     padding: 10px 10px 10px 10px;
     background: #eee;
     font-size: 24px;
     color: #000;
-    border: 1px solid #fff;
-    border: 1px solid #dfdfdf;
-    border: 1px solid rgba(96, 96, 96, 0.2);
+    // border: 1px solid #fff;
+    // border: 1px solid #dfdfdf;
+    // border: 1px solid rgba(96, 96, 96, 0.2);
     -webkit-transform: translate3d(0%,0,0) scale3d(1,1,1);
     -moz-transform: translate3d(0%,0,0) scale3d(1,1,1);
     -ms-transform: translate3d(0%,0,0) scale3d(1,1,1);
@@ -61,19 +61,19 @@
 
 /* Image rotation */
 #tinderslide li.pane1 {
-    -webkit-transform: rotate(-1deg);
-    -moz-transform: rotate(-1deg);
-    -o-transform: rotate(-1deg);
-    -ms-transform: rotate(-1deg);
-    transform: rotate(-1deg);
+    // -webkit-transform: rotate(-1deg);
+    // -moz-transform: rotate(-1deg);
+    // -o-transform: rotate(-1deg);
+    // -ms-transform: rotate(-1deg);
+    // transform: rotate(-1deg);
 }
 
 #tinderslide li.pane2 {
-    -webkit-transform: rotate(2deg);
-    -moz-transform: rotate(2deg);
-    -o-transform: rotate(2deg);
-    -ms-transform: rotate(2deg);
-    transform: rotate(2deg);
+    // -webkit-transform: rotate(2deg);
+    // -moz-transform: rotate(2deg);
+    // -o-transform: rotate(2deg);
+    // -ms-transform: rotate(2deg);
+    // transform: rotate(2deg);
 }
 
 /* Like & dislike badge images */
